26.3 und kleiner deprication update